<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/linear_layout_padding"
            android:layout_marginTop="@dimen/margin_top">

            <TextView
                android:id="@+id/greetingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_msg"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/text_color_primary"
                android:paddingBottom="@dimen/Padding_small"/>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="text"/>

            <Button
                android:id="@+id/greetButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/greet_me_btn"
                android:backgroundTint="@color/button_background_color"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/margin_small"
                android:src="@drawable/b"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <CheckBox
                    android:id="@+id/subscribeCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribe"
                    android:textColor="@color/text_color_primary"
                    android:textSize="@dimen/text_size_medium"
                    app:buttonTint="@color/checkbox_text_color"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                    <TextView
                        android:id="@+id/notificationLeble"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/enable_notifications"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@color/text_color_primary"
                        android:paddingBottom="@dimen/Padding_small"/>

                    <Switch
                        android:id="@+id/notificationSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/cardview_default_radius"
                        android:text="@null"
                        app:useMaterialThemeColors="false"
                        android:trackTint="@color/switch_track_tint"
                        android:thumbTint="@color/switch_thumb_tint"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/favorite_color"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/text_color_primary"
                android:layout_marginTop="@dimen/margin_small"/>

            <RadioGroup
                android:id="@+id/colorRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small">
                <RadioButton
                    android:id="@+id/redRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/red"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textColor="@color/text_color_primary"
                    app:buttonTint="@color/radio_button_red"/>

                <RadioButton
                    android:id="@+id/orangeRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/orange"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textColor="@color/text_color_primary"
                    app:buttonTint="@color/radio_button_orange"/>

                <RadioButton
                    android:id="@+id/yellowRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textColor="@color/text_color_primary"
                    app:buttonTint="@color/radio_button_yellow"/>

                <RadioButton
                    android:id="@+id/greenRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/green"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textColor="@color/text_color_primary"
                    app:buttonTint="@color/radio_button_green"/>

                <RadioButton
                    android:id="@+id/blueRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blue"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textColor="@color/text_color_primary"
                    app:buttonTint="@color/radio_button_blue"/>

                <RadioButton
                    android:id="@+id/purpleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/purple"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textColor="@color/text_color_primary"
                    app:buttonTint="@color/radio_button_purple"/>

                <RadioButton
                    android:id="@+id/pinkRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pink"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textColor="@color/text_color_primary"
                    app:buttonTint="@color/radio_button_pink"/>

                <RadioButton
                    android:id="@+id/brownRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brown"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textColor="@color/text_color_primary"
                    app:buttonTint="@color/radio_button_brown"/>

                <RadioButton
                    android:id="@+id/blackRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/black"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textColor="@color/text_color_primary"
                    app:buttonTint="@color/radio_button_black"/>

                <RadioButton
                    android:id="@+id/whiteRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/white"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textColor="@color/text_color_primary"
                    app:buttonTint="@color/radio_button_white"/>

                <RadioButton
                    android:id="@+id/grayRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gray"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textColor="@color/text_color_primary"
                    app:buttonTint="@color/radio_button_gray"/>

                <RadioButton
                    android:id="@+id/magentaRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/magenta"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textColor="@color/text_color_primary"
                    app:buttonTint="@color/radio_button_magenta"/>
            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/seekBarLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volume"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/text_color_primary"
                    android:layout_marginBottom="@dimen/margin_small"/>

                <SeekBar
                    android:id="@+id/volumeSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="15"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:progressTint="@color/switch_track_tint"
                    android:thumbTint="@color/switch_thumb_tint"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/spinner_min_height"
                android:layout_marginBottom="8dp"/>

            <ProgressBar
                android:id="@+id/loadingProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/margin_small"
                android:progressTint="@color/progress_bar_tint"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:backgroundTint="@color/button_background_color"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_large"
                android:layout_marginBottom="@dimen/margin_large"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>